--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "saludar":"echo \"Hola, este es mi primer ejercicio con Node en el mejor Bootcamp de programación del mundo\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
